--- a/CSS/style.css
+++ b/CSS/style.css
@@ -137,7 +137,7 @@ body {
     border-radius: 20px;
     text-align:justify;
     vertical-align: middle;
-    padding-top:10%;
+    padding-top:40px;
 }
 .yt-holder{
     border-radius: 20px;
